@@ -1,18 +1,16 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-DIST sphinxcontrib-blockdiag-0.3.1.tar.gz 4201 RMD160 a39e10c9da6f2f8567cfbe897c1a8eaea3aea4dc SHA1 bc79c4a9b0a8782a1fcfb24680f509c2a701555c SHA256 f5f4e3b1583ff847f11638d206d1cf3274d0ab480b606c40c00d88aaac5d8e1e
 DIST sphinxcontrib-blockdiag-0.4.tar.gz 4193 RMD160 332ce08773dc52f6f1de68c48994f1b9dc37be58 SHA1 385179060b2ae68a9950d23a9925a3e968abde25 SHA256 74170b30885e50591925721112ceeb02f85f9b1551df79c48402a0818c1a1684
 DIST sphinxcontrib-blockdiag-0.5.tar.gz 4769 RMD160 e8cb15bb822a307f3930d3a577e3b55c4b082d6d SHA1 7e76279fd9443a1fcbd0fea9a3813760fae4b0c9 SHA256 706cff299a8dd420fa47b991d107d0be985d8eb031e27be31f6c2b01f3886190
-EBUILD sphinxcontrib-blockdiag-0.3.1.ebuild 653 RMD160 87982957f65fbdb4f183b595a8e50c8b0b7b198d SHA1 ab6b025d39c04a59d64719e4a92a258856ad6d1d SHA256 bfebc0a0df66e6e139f5606df96319b9b78f778f7390cb344a432b11e442ed3b
-EBUILD sphinxcontrib-blockdiag-0.4.ebuild 662 RMD160 e17322020fba33299482d9357a7fdd52744554ae SHA1 25be001bdc3aba1c4b7340908159b72caa89be56 SHA256 72d7f00b418423a84fdde4ac1fdc733e109787ce5fb31b1f2bf9e15fbd7a5e40
+EBUILD sphinxcontrib-blockdiag-0.4.ebuild 661 RMD160 0db305195f6f4266d7382e174a08559ef2b4d314 SHA1 aa02cbea68392a98462400301433fd3f25c447cf SHA256 906ff52db8f21316e704e52f2ec15aefbb270e114159aafcc1bfbe9120ef5df2
 EBUILD sphinxcontrib-blockdiag-0.5.ebuild 663 RMD160 d40101da41a77178862805f6b174f03ce28ec0c9 SHA1 ff08345d07c6fb146112fab6fbf0874b37ece6ca SHA256 ceeceecf6692d8d1ad89bcb97e4de0414ec239ee9a0feb3e852f41af3c7c85bf
-MISC ChangeLog 1113 RMD160 f6f8a321b24b62f158d566d7da0fd403749d473d SHA1 f097f05253645a9e40177fc0223c9ce1628f89d5 SHA256 730856af5a56ce129a1c584f38d725bf26e88ef781def9296487597b5b00bbe1
+MISC ChangeLog 1255 RMD160 a068d8bf2b51729be46be3dae54dd013072496b8 SHA1 6ffcd2e56c4cf51d307c5cde97d75808bfc3aeb3 SHA256 b020318064ce3eb3db5eac9f0b94b6cc6c986c35ff9ff5d01bf1c72913286ea4
 MISC metadata.xml 667 RMD160 a6b5fc4a97d6ce6aceab09dbba891726864d5cb8 SHA1 74611dacf4878870366e76f80d636e068a9331ab SHA256 138b5a95f114598614b5358ebe24e70a80b2278e252d650082815c1fabdce4e7
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.16 (GNU/Linux)
 
-iEYEARECAAYFAkzZTNcACgkQzJrj3cAXR0lHEQCeKOYpED1fXucS+O1xogqb9ee3
-oz8AoL18Ro/XrZtXHZxv0nLsDvBRfVdO
-=LaQa
+iEYEARECAAYFAkzartEACgkQzJrj3cAXR0l80ACfRcw/8uJexOSPsm3N5tKrdqbt
+RR0An2W/UPOLHHxXX4OOLoIvQJlM8gcW
+=usWW
 -----END PGP SIGNATURE-----
