@@ -6,7 +6,7 @@ mirror://pypi/s/sphinxcontrib-blockdiag/sphinxcontrib-blockdiag-0.4.tar.gz
 http://pypi.python.org/pypi/sphinxcontrib-blockdiag/
 BSD
 Sphinx extension to support media-gfx/blockdiag diagrams
-~amd64 x86
+amd64 x86
 distutils eutils jnrowe-pypi multilib portability python toolchain-funcs
 
 
