@@ -1,4 +1,3 @@
-REM 2010-11-07 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 media-gfx/sphinxcontrib-blockdiag-0.4 %a
 REM 2010-11-07 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 media-gfx/sng-1.0.2-r1 %a
 REM 2010-11-07 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 media-gfx/sng-1.0.2-r1 %a
 REM 2010-11-08 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 dev-util/ditz-0.5-r1 %a
