@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  10 Nov 2010; James Rowe <jnrowe@gmail.com>
+  -sphinxcontrib-blockdiag-0.3.1.ebuild, sphinxcontrib-blockdiag-0.4.ebuild:
+  Keyworded amd64.
+
   09 Nov 2010; James Rowe <jnrowe@gmail.com>
   sphinxcontrib-blockdiag-0.4.ebuild:
   Keyworded x86.
